--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "3_",
   "private": true,
-  "homepage": "https://em1-0.github.io/todo-beginner/",
+  "homepage": "https://em1-0.github.io/todo-beginner",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "predeploy": "npm run build"
   },
   "dependencies": {
